--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Array Forward and Backward GIF</title>
 <style>
-   body {
+body {
     margin: 0;
     padding: 0;
     overflow: hidden; /* Prevent scrolling */
+    background-color: black; /* Set background color to black */
   }
 
   #gif-container {
@@ -41,7 +42,6 @@
 </head>
 <body>
     <div id="gif-container">
-        <img src="-create-an-array-forward-and-ba.gif" alt="Splash GIF">
       </div>
       <div id="content-container">
         <div id="content"></div>
